--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,15 @@
 [submodule "EnTdecker"]
 	path = EnTdecker
 	url = https://github.com/le-schlo/EnTdecker.git
+
+[submodule "EnTdecker/Models/triplet_energy/AttFP/AttentiveFP"]
+	path = EnTdecker/Models/triplet_energy/AttFP/AttentiveFP
+	url = https://github.com/le-schlo/AttentiveFP.git
+[submodule "EnTdecker/Models/triplet_energy/transformer-cnn"]
+	path = Models/triplet_energy/transformer-cnn
+	url = https://github.com/le-schlo/transformer-cnn.git
+
+[submodule "EnTdecker/EasyChemML"]
+	path = EnTdecker/EasyChemML
+	url = https://github.com/le-schlo/EasyChemML.git
+	branch = EnTdecker
